tests/errors/bad-grouping-definition.sbl
groupings (g1 g2 g3)
define g1
define g2 'abc' -
define g3
externals (stem)
define stem as ()
